--- a/index.html
+++ b/index.html
@@ -16,4 +16,6 @@
 
       <h3>Time:</h3>
       <h3 id="time"></h3>
-      
+      <h1>Ping-Pong</h1>
+      <div class="col-sm-4">
+        <div id="sidebar">
