add side bar to the body headers and paragraphs

--- a/index.html
+++ b/index.html
@@ -19,3 +19,12 @@
       <h1>Ping-Pong</h1>
       <div class="col-sm-4">
         <div id="sidebar">
+          <h3>About Ping Pong</h3>
+          <h4>Created by:</h4>
+          <p>Dishon Kuria</p>
+          <h4>GitHub Username/URL:</h4>
+          <a href="https://github.com/Dishon-Kuria/ping-pong">Dishon-Kuria</a>
+          <h4>Week 3 Independent Project:</h4>
+          <p>Arrays &amp; Looping</p>
+        </div>
+      </div>
