--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 
   <head>
-    <link rel="stylesheet" href="build/css/styles.css">
-
-    <script src="build/js/scripts.js"></script>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.2.1.js"></script>
+    <script src="js/scripts.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
     <title>Ping Pong</title>
   </head>
@@ -28,3 +29,40 @@
           <p>Arrays &amp; Looping</p>
         </div>
       </div>
+      <div class="col-sm-8">
+        <form id="Signup">
+          <label for="email">Enter your email:</label>
+          <input type="text" id="email">
+          <button type="submit">Submit</button>
+        </form>
+        <h3>Let's Play!</h3>
+        <h4>Rules:</h4>
+        <p>PingPong will count up your number from 1 with the following exceptions</p>
+        <ol>
+          <li>Numbers divisible by 3 will become "ping"</li>
+          <li>Numbers divisible by 5 will become "pong"</li>
+          <li>Numbers divisible by 15 will become "pingpong"</li>
+        </ol>
+        <div class="row">
+          <div class="col-sm-3">
+            <p><strong>Enter Your Number Here:</strong></p>
+            <ul id="uList">
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <form class="form-horizontal">
+            <div class="form-group" id="inputForm">
+              <input id="userInput" type="text" class="form-control">
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <button class="submitButton">PingPong</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+</body>
+</html>
