--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <p>Dishon Kuria</p>
           <h4>GitHub Username/URL:</h4>
           <a href="https://github.com/dishonkuria/PingPong">Dishon-Kuria</a>
-          <h4>Week 3 Independent Project:</h4>
+          <h4>Good Software:</h4>
           <p>Arrays &amp; Looping</p>
         </div>
       </div>
